# nsh-dt-app-tauri-rust

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
app/: index.html  package-lock.json  package.json  screenshot.html  vite.config.js
app/src/: App.jsx  main.jsx  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/ocr/: Cargo.toml
crates/ocr/src/: lib.rs
crates/poetry/: Cargo.toml
crates/poetry/examples/: bench_query.rs
crates/poetry/src/: lib.rs
data/: README.md  settings.example.json
docs/: api-compat.md  performance.md
scripts/: build-clause-index.py  check.ps1  migrate-settings.ps1
