[workspace]
members = [
  "crates/core",
  "crates/ai",
  "crates/ocr",
  "crates/poetry",
  "crates/api",
  "app/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.0"
license = "MIT"
authors = ["lingfengQAQ"]

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
futures-util = "0.3"
once_cell = "1"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli", "zstd", "deflate"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "sync", "process"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
