[package]
name = "nsh-ocr"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
nsh-core = { path = "../core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
